refactor parser: use a look-behind SymbolStream to do context-sensitive matching